--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
             android:id="@+id/idLLEdt"
             android:layout_below="@+id/idTVCityName"
             android:weightSum="5"
-            >
+            tools:ignore="UnknownId">
             
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="0dp"
